<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="facebook_app_id" translatable="false">1830932323800441</string>
    <string name="facebook_client_token" translatable="false">1830932323800441</string>
    <string name="permission_to_manage_dnd" translatable="false">"In-telligent" Would Like to Send You Notifications</string>
    <string name="permission_to_manage_dnd_description" translatable="false">Notifications may include alerts, sounds, and icon badges. These can be configured in Settings</string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="server_client_id">592871569708-6vaog0bbf8d7b48kj7j7au4ga0oaa916.apps.googleusercontent.com</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="communities">Communities</string>
    <string name="inbox">Inbox</string>
    <string name="inbox_new">Inbox (<xliff:g example="1" id="num_messages">%d</xliff:g>)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="create">Create</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="more">…more</string>
    <string name="back">Back</string>
    <string name="tap_here">Tap Here</string>
    <string name="clear_message">Clear Message</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="messages">Messages</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="logout">Logout</string>
    <string name="filters">Filters</string>
    <string name="none">None</string>
    <string name="near_me">Near Me</string>
    <string name="physical">Physical</string>
    <string name="virtual">Virtual</string>
    <string name="newest_first">Newest First</string>
    <string name="by_community">By Community</string>
    <string name="by_type">By Type</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="personal_communities">Personal Communities</string>
    <string name="total_silence">Total Silence</string>
    <string name="notifications">Notifications</string>
    <string name="receive_regular_alerts">Receive Regular Alerts</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="only_when_im_here">Only When I\'m Here</string>
    <string name="account">Account</string>
    <string name="interests">Interests</string>
    <string name="my_info">My Info</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="zipcode">Postal Code</string>
    <string name="alert_language">Alert Language</string>
    <string name="set_language_to">Set language to</string>
    <string name="support">Support</string>
    <string name="help_desk">Help Desk</string>
    <string name="number">Number</string>
    <string name="hours">Hours</string>
    <string name="email">Email</string>
    <string name="general_inquiries">General Inquiries on In-telligent</string>
    <string name="select_a_community">Select a Community</string>
    <string name="short_description">Short Description (title)</string>
    <string name="tap_to_enter_message">Tap to Enter Message</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_message">Enter Message</string>
    <string name="type_of_alert">Type of Alert</string>
    <string name="select_alert_type">Select Alert Type</string>
    <string name="regular_alert">Regular Alert</string>
    <string name="personal_alert">Personal Alert</string>
    <string name="ping_alert">Ping Alert</string>
    <string name="critical_alert">Critical Alert</string>
    <string name="life_safety">Life Safety</string>
    <string name="send_to">Send To</string>
    <string name="send_to_specific">Send to Specific Subscriber or Groups</string>
    <string name="send_to_all">Send to All Subscribers of This Community</string>
    <string name="deliver_to">Deliver To</string>
    <string name="intelligent_only">In-telligent Only</string>
    <string name="intelligent_and_imported">In-telligent and Imported Emails</string>
    <string name="intelligent_and_all">In-telligent and All Emails</string>
    <string name="search_for_communities">Search for Communities</string>
    <string name="my_communities">My Communities</string>
    <string name="add_pc">Add PC</string>
    <string name="add_new">Add New</string>
    <string name="disable_auto_subscribe">Disable Auto-Subscribe</string>
    <string name="you_are_now_subscribed_to">You are now subscribed to "<xliff:g example="Beans and Brews" id="community">%s</xliff:g>"</string>
    <string name="you_are_now_subscribed_to_the_community">You are now subscribed to the community.</string>
    <string name="would_you_like_to_create_personal_community">Do you want to create a Personal Community to send messages to Family and Friends?</string>
    <string name="create_personal_community">Create Personal Community</string>
    <string name="name_your_community">Name your Community</string>
    <string name="default_thumbnail">Default Thumbnail</string>
    <string name="create_thumbnail">Create Thumbnail</string>
    <string name="listen_to_urgent">Listen to the urgent sound alert</string>
    <string name="listen_to_emergency">Listen to the emergency sound alert</string>
    <string name="when_you_send_members_will_hear">*When you send an urgent or emergency alert to the community, members will hear the alert sound</string>
    <string name="congratulations">Congratulations!</string>
    <string name="created">Created</string>
    <string name="edit_personal_community">Edit Personal Community</string>
    <string name="personal_community">Personal Community</string>
    <string name="delete_community">Delete Community</string>
    <string name="members_in_community">Members in Community</string>
    <string name="invite_others_to_join">Invite Others to Join</string>
    <string name="send_alert_to_community">Send Alert to Community</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete"<xliff:g example="Beans and Brews" id="community"></xliff:g>"</string>
    <string name="community_members">Community Members</string>
    <string name="invite_again">Invite Again</string>
    <string name="save_edits">Save Edits</string>
    <string name="edit">Edit</string>
    <string name="status">Status</string>
    <string name="joined">Joined</string>
    <string name="invited">Invited</string>
    <string name="pending">Pending</string>
    <string name="enter_contact_name">Enter Contact Name</string>
    <string name="enter_contact_email">Enter Contact Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_contact_phone">Enter Contact Phone</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="first_time_user_str">First Time User</string>
    <string name="returning_subscriber_str">Returning Subscriber</string>
    <string name="respond">RESPOND TO SUGGESTED ALERT</string>
    <string name="response_hint">Type response here..</string>
    <string name="sound_alert">Sound Alert</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="also_disable">Would you also like to disable auto-subscription?</string>
    <string name="create_account">Create Account</string>
    <string name="set">Set</string>
    <string name="hours_of_silence">Hours of Silence</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to log out? You will stop receiving all alerts.</string>
    <string name="never_mind">Never mind</string>
    <string name="no_personal_communities">No Personal Communities</string>
    <string name="edit_time">Edit Time</string>
    <string name="total_silence_on">Total Silence On:</string>
    <string name="other_communities">Other Communities</string>
    <string name="location_services_timed_out">Location services timed out</string>
    <string name="no_results_found">No results found</string>
    <string name="there_was_an_error_initializing_tts_engine">There was an error initializing the TTS Engine</string>
    <string name="attachments_total" formatted="false">Attachments <b>%d total</b> </string>
    <string name="enter_password">Enter Password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="there_are_no_available_community_managers_consider">There are no available community managers. Please consider sending a text alert instead.</string>
    <string name="this_community_is_password_protected">This Community is password protected, you must subscribe to see it\'s messages</string>
    <string name="this_community_does_not_have_messages">This Community does not have any messages</string>
    <string name="enable_auto_subscribe">Enable Auto-Subscribe</string>
    <string name="would_you_like_to_perm_delete_contact">Would you like to permanently delete this contact?</string>
    <string name="please_enter_alert_title">Please enter an alert title</string>
    <string name="please_enter_alert_body">Please enter an alert body</string>
    <string name="please_enter_an_alert_type">Please select an alert type.</string>
    <string name="alert_has_been_sent_to_community_manager">Alert has been sent to your Community Manager</string>
    <string name="attachments_too_large_try_again">Attachments too large. Please try again.</string>
    <string name="please_enter_name_of_community">Please enter a name for your community.</string>
    <string name="please_input_the_message_into_the_help_box">Please input a message into the help box.</string>
    <string name="your_request_has_been_sent_to_support_team">Your request has been sent to the support team.</string>
    <string name="unsave">Unsave</string>
    <string name="view">View</string>
    <string name="do_you_want_disable_audible_alerts">Do you want to disable Audible Lightning Alerts?</string>
    <string name="your_invitation_is_no_longer_valid">Your invitation is no longer valid</string>
    <string name="location_permissions_required_prompt">Location permissions are required for the app to function properly, please accept location permissions and try again.</string>
    <string name="forgot_password_enter_email_for_link">Forgot your password? Just enter the email used to create your account, and we\'ll email you a link to reset it.</string>
    <string name="submit">Submit</string>
    <string name="or">or</string>
    <string name="_8am_6pm_mon_fri">8am - 6pm CST Mon-Fri</string>
    <string name="edit_member">Edit Member</string>
    <string name="save_changes">Save Changes</string>
    <string name="find">Find</string>
    <string name="invite_new_member">Invite New Member</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="send_invite_save_contact"><![CDATA[Send Invite & Save Contact]]></string>
</resources>