<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:cardBackgroundColor="@color/white"
      app:cardCornerRadius="2dp"
      app:cardUseCompatPadding="true"
      tools:ignore="MissingConstraints">

    <RelativeLayout
        android:id="@+id/alertTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/forgotPasswordTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:text="@string/enter_email_address"
          android:textColor="@color/black"
          android:textSize="20sp"/>

      <TextView
          android:id="@+id/forgotPasswordMessage"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/forgotPasswordTitle"
          android:padding="10dp"
          android:text="@string/forgot_password_enter_email_for_link"
          android:textColor="@color/black"
          android:textSize="16sp"/>

      <EditText
          android:id="@+id/forgotPasswordEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/forgotPasswordMessage"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginBottom="10dp"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:paddingLeft="5dp"
          android:paddingRight="5dp"
          android:textIsSelectable="false"
          android:textSize="16sp"
          tools:ignore="TextFields"
          android:autofillHints="" />

      <TextView
          android:id="@+id/forgotPasswordCancel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/forgotPasswordEditText"
          android:layout_toStartOf="@id/forgotPasswordSubmit"
          android:padding="10dp"
          android:text="@string/cancel"
          android:clickable="true"
          android:textColor="@color/colorPrimary"
          android:textSize="18sp"
          android:focusable="true" />

      <TextView
          android:id="@+id/forgotPasswordSubmit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_below="@+id/forgotPasswordEditText"
          android:padding="10dp"
          android:text="@string/submit"
          android:textColor="@color/colorPrimary"
          android:clickable="true"
          android:textSize="18sp"
          android:focusable="true" />

    </RelativeLayout>
  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>