<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.05"
      app:layout_constraintStart_toStartOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_right"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.95"
      app:layout_constraintStart_toEndOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_left_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.2"
      app:layout_constraintStart_toStartOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_right_button"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.8"
      app:layout_constraintStart_toEndOf="parent"/>

  <ImageView
      android:id="@+id/edit_member_back_button"
      android:layout_width="10dp"
      android:layout_height="10dp"
      android:layout_margin="10dp"
      android:src="@drawable/left_arrow_new"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/edit_member_back_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:text="@string/back"
      android:textAllCaps="true"
      android:textColor="@color/translate_button_black"
      app:layout_constraintBottom_toBottomOf="@+id/edit_member_back_button"
      app:layout_constraintStart_toEndOf="@+id/edit_member_back_button"
      app:layout_constraintTop_toTopOf="@+id/edit_member_back_button"/>

  <TextView
      android:id="@+id/edit_member_title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:text="@string/edit_member"
      android:textColor="@color/gray2"
      android:textStyle="bold"
      android:padding="10dp"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_member_back_button"
      />

  <EditText
      android:id="@+id/edit_member_name_edittext"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:background="@drawable/edittext_send_message"
      android:padding="10dp"
      android:singleLine="true"
      android:hint="@string/name"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintTop_toBottomOf="@id/edit_member_title_text"/>

  <EditText
      android:id="@+id/edit_member_mail_edittext"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:background="@drawable/edittext_send_message"
      android:padding="10dp"
      android:singleLine="true"
      android:hint="@string/email"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintTop_toBottomOf="@id/edit_member_name_edittext"/>

  <EditText
      android:id="@+id/edit_member_phone_edittext"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:singleLine="true"
      android:layout_marginTop="30dp"
      android:background="@drawable/edittext_send_message"
      android:hint="@string/enter_contact_phone"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintTop_toBottomOf="@id/edit_member_mail_edittext"/>

  <TextView
      android:id="@+id/edit_member_save_changes"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:padding="10dp"
      android:background="@drawable/view_button_background"
      android:text="@string/save_changes"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left_button"
      app:layout_constraintEnd_toEndOf="@id/guideline_right_button"
      app:layout_constraintTop_toBottomOf="@id/edit_member_phone_edittext"/>

  <TextView
      android:id="@+id/edit_member_find"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:background="@drawable/black_button_background"
      android:text="@string/find"
      android:textAlignment="center"
      android:padding="10dp"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left_button"
      app:layout_constraintEnd_toEndOf="@id/guideline_right_button"
      app:layout_constraintTop_toBottomOf="@id/edit_member_save_changes"/>


</androidx.constraintlayout.widget.ConstraintLayout>