<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:fillViewport="true">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.05"
      app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_right"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.95"
      app:layout_constraintStart_toEndOf="parent"/>

    <TextView
      android:id="@+id/settings_support_title_text"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/support"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.05"
      />

    <EditText
      android:id="@+id/settings_support_message_edittext"
      android:layout_width="0dp"
      android:layout_height="120dp"
      android:layout_marginTop="10dp"
      android:background="@drawable/edittext_send_message"
      android:gravity="start"
      android:hint="@string/enter_message"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/settings_support_title_text"/>

    <TextView
      android:id="@+id/settings_support_send_button"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@drawable/view_button_background"
      android:text="@string/send"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="15sp"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/required_enter_message"/>

    <View
      android:id="@+id/settings_support_divider"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginTop="10dp"
      android:background="@color/gray2"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/settings_support_send_button"></View>

    <TextView
      android:id="@+id/settings_support_general_text"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/general_inquiries"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/settings_support_divider"/>

    <TextView
      android:id="@+id/settings_support_number_text"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:autoLink="phone"
      android:text="@string/number"
      android:textColor="@color/black"
      android:textSize="13sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/settings_support_general_text"/>

    <TextView
      android:id="@+id/settings_support_number_field"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/settings_support_number_text"/>

    <TextView
      android:id="@+id/settings_support_hours_text"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/hours"
      android:textColor="@color/black"
      android:textSize="13sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/settings_support_number_field"/>

    <TextView
      android:id="@+id/settings_support_hours_field"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:autoLink="phone"
      android:text="@string/_8am_6pm_mon_fri"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@+id/settings_support_hours_text"/>

    <TextView
      android:id="@+id/settings_support_email_text"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/email"
      android:textColor="@color/black"
      android:textSize="13sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@id/settings_support_hours_field"/>

    <TextView
      android:id="@+id/settings_support_email_field"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:autoLink="email"
      android:linksClickable="true"
      android:text="support@in-telligent.com"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@id/settings_support_email_text"/>

    <include
      android:id="@+id/required_enter_message"
      layout="@layout/field_required_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintTop_toBottomOf="@id/settings_support_message_edittext"
      ></include>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>