<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.05"
      app:layout_constraintStart_toStartOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_right"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.95"
      app:layout_constraintStart_toEndOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_left_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.15"
      app:layout_constraintStart_toStartOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_right_button"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.85"
      app:layout_constraintStart_toEndOf="parent"/>

  <TextView
      android:id="@+id/invite_member_title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:padding="10dp"
      android:text="@string/invite_new_member"
      android:textColor="@color/gray2"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.050000012" />

  <EditText
      android:id="@+id/invite_member_name_edittext"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:padding="10dp"
      android:background="@drawable/edittext_send_message"
      android:hint="@string/enter_name"
      android:maxEms="20"
      android:singleLine="true"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintTop_toBottomOf="@id/invite_member_title_text"/>

  <EditText
      android:id="@+id/invite_member_mail_edittext"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:padding="10dp"
      android:background="@drawable/edittext_send_message"
      android:hint="@string/enter_email"
      android:maxEms="20"
      android:singleLine="true"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintTop_toBottomOf="@id/invite_member_name_edittext"/>

  <TextView
      android:id="@+id/invite_member_or_text"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:text="@string/or"
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintTop_toBottomOf="@id/invite_member_mail_edittext"/>

  <EditText
      android:id="@+id/invite_member_phone_edittext"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:padding="10dp"
      android:background="@drawable/edittext_send_message"
      android:hint="@string/enter_phone"
      android:inputType="phone"
      android:maxEms="12"
      android:singleLine="true"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left"
      app:layout_constraintEnd_toEndOf="@id/guideline_right"
      app:layout_constraintTop_toBottomOf="@id/invite_member_or_text"/>

  <TextView
      android:id="@+id/invite_member_send"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:padding="10dp"
      android:background="@drawable/view_button_background"
      android:text="@string/send_invite_save_contact"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="15sp"
      app:layout_constraintStart_toStartOf="@id/guideline_left_button"
      app:layout_constraintEnd_toEndOf="@id/guideline_right_button"
      app:layout_constraintTop_toBottomOf="@id/invite_member_phone_edittext"/>

</androidx.constraintlayout.widget.ConstraintLayout>